--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                                     <div class="portfolio-box-caption">
                                         <div class="portfolio-box-caption-content">
                                             <div class="portfolio-box-caption-content">
-                                                <div class="project-name">Dark Magic Particle Effect</div>
-                                                <div class="project-category text-faded">A Dark Magic Visual Effect using particles & the new Visual Effects Graph in Unity 2019.3</div>
+                                                <div class="project-name">Dark Magic</div>
+                                                <div class="project-category text-faded">A dark magic particle effect using the new Visual Effects Graph in Unity 2019.3</div>
                                             </div>
                                         </div>
                                     </div>
@@ -184,7 +184,7 @@
                             </li>
                             <li>
                                 <a href="MarioCastleAnimation/mariocastle.html" class="portfolio-box" target="_blank">
-                                    <img src="img/portfolio/thumbnails/mario_castle.png" class="img-scroller" alt="Castle Animation made with Unity">
+                                    <img src="img/portfolio/thumbnails/mario_castle.png" class="img-scroller" alt="Castle Animation">
                                     <div class="portfolio-box-caption">
                                         <div class="portfolio-box-caption-content">
                                             <div class="portfolio-box-caption-content">
@@ -230,12 +230,12 @@
                             <!-- Define photos here -->
                             <li>
                                 <a href="UnrealBlocks/MovingBlocks.html" class="portfolio-box" target="_blank">
-                                    <img src="img/portfolio/thumbnails/blocks.png" class="img-scroller" alt="Moving Blocks Animation in UE4">
+                                    <img src="img/portfolio/thumbnails/blocks.png" class="img-scroller" alt="Moving Blocks Animation">
                                     <div class="portfolio-box-caption">
                                         <div class="portfolio-box-caption-content">
                                             <div class="portfolio-box-caption-content">
                                                 <div class="project-name">Moving Blocks Animation in Unreal Engine 4</div>
-                                                <div class="project-category text-faded">A simple animation of moving, warping blocks built in Unreal Engine 4 using generated Alembic file</div>
+                                                <div class="project-category text-faded">A simple animation of moving, warping blocks built in Unreal Engine 4 using a generated Alembic file</div>
                                             </div>
                                         </div>
                                     </div>
