--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                                     <div class="portfolio-box-caption">
                                         <div class="portfolio-box-caption-content">
                                             <div class="portfolio-box-caption-content">
-                                                <div class="project-name">Moving Blocks Animation in Unreal Engine 4</div>
+                                                <div class="project-name">Moving Blocks</div>
                                                 <div class="project-category text-faded">A simple animation of moving, warping blocks built in Unreal Engine 4 using a generated Alembic file</div>
                                             </div>
                                         </div>
