--- a/index.html
+++ b/index.html
@@ -32,6 +32,33 @@
     <link rel="author" href="https://plus.google.com/+EJMann"/>
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
 
+    <!-- Preload Images -->
+    <link rel="preload" href="img/header.jpg" as="image">
+    <link rel="preload" href="img/icons/github.png" as="image">
+    <link rel="preload" href="img/icons/hackerrank.png.png" as="image">
+    <link rel="preload" href="img/icons/linkedin.png.png" as="image">
+    <link rel="preload" href="img/icons/soundcloud.png.png" as="image">
+    <link rel="preload" href="img/icons/stackoverflow.png.png" as="image">
+    <link rel="preload" href="img/icons/twitch.png.png" as="image">
+    <link rel="preload" href="img/icons/twitter.png.png" as="image">
+    <link rel="preload" href="img/icons/unityconnect.png.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/1.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/2.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/3.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/4.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/5.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/6.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/7.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/8.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/9.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/10.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/11.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/12.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/mario_castle.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/darkmagic.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/blocks.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/food_leage.png" as="image">
+
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
