--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
     <link rel="preload" href="img/portfolio/thumbnails/mario_castle.png" as="image">
     <link rel="preload" href="img/portfolio/thumbnails/darkmagic.png" as="image">
     <link rel="preload" href="img/portfolio/thumbnails/blocks.png" as="image">
-    <link rel="preload" href="img/portfolio/thumbnails/food_leage.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/food_league.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/lof_avatar_creator.png" as="image">
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -137,7 +138,7 @@
                     <p class="text-faded">From software auditor to virtual reality and game developer, EJ has come a long way. During his undergraduate career at Lehigh University, EJ worked hard auditing software for Lehigh's Center of Advanced Materials and Nanotechnology through the school's work study program. After completing his Bachelor's degree in Cognitive Science, he earned his Master's in Linguistics and Cognitive Science at the University of Delaware. He then went on to develop AAA Northampton County's public website as an intern.</p>
                     <p class="text-faded">EJ moved on to developing touch screen menus and SQL databases for bars and restaurants at a company known as Harbortouch. And soon after, he was blessed with an opportunity to begin doing iOS development. EJ developed over 10 iPad and iPhone apps during his training which opened the doorway to Android development.</p>
                     <p class="text-faded">EJ has worked with big name companies like Ecotech Marine and Highmark Health, and now works for Comcast in Center City Philadelphia developing the company's newest virtual and mixed reality experiences!</p>
-                    <p class="text-faded">In his free time, EJ produces his own music and develops his own video games. In addition, he practices Wing Chun kung fu at <a href="https://www.philadelphiawingchun.com/" style="color: aquamarine;font-weight: bold;">Philadelphia Wing Chun</a>. He also is training to be a parkour coach at <a href="https://www.ppkphilly.com/" style="color: aquamarine;font-weight: bold;">Pinnacle Parkour Academy</a> in Philadelphia!</p>
+                    <p class="text-faded">In his free time, EJ produces his own music and develops his own video games. In addition, he practices Wing Chun kung fu at <a href="https://www.philadelphiawingchun.com/" style="color: aquamarine;font-weight: bold;">Philadelphia Wing Chun</a>.</p>
                     <p class="text-faded">Only one goal remains, developing a AAA game title for a major game studio, a goal he has his mind set on.</p>
                 </div>
             </div>
@@ -236,14 +237,12 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://aframe-demo.glitch.me/" class="portfolio-box" target="_blank">
-                                    <img src="img/portfolio/thumbnails/7.png" class="img-scroller" alt="A-Frame Web VR Playground">
+                                <a href="LOF_AvatarCreator/lof_avatar_creator.html" class="portfolio-box" target="_blank">
+                                    <img src="img/portfolio/thumbnails/lof_avatar_creator.png" class="img-scroller" alt="Scene Generator">
                                     <div class="portfolio-box-caption">
                                         <div class="portfolio-box-caption-content">
-                                            <div class="portfolio-box-caption-content">
-                                                <div class="project-name">A-Frame Web VR Playground</div>
-                                                <div class="project-category text-faded">A Web VR playground where the user can move around and stretch objects using the Oculus Rift</div>
-                                            </div>
+                                            <div class="project-name">League of Food Avatar Creator Concept</div>
+                                            <div class="project-category text-faded">A really cool avatar creator concept app for Philadelphia Fusion Overwatch event guests!</div>
                                         </div>
                                     </div>
                                 </a>
@@ -282,12 +281,14 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://scene-generator.glitch.me/" class="portfolio-box" target="_blank">
-                                    <img src="img/portfolio/thumbnails/3.png" class="img-scroller" alt="Scene Generator">
+                                <a href="https://aframe-demo.glitch.me/" class="portfolio-box" target="_blank">
+                                    <img src="img/portfolio/thumbnails/7.png" class="img-scroller" alt="A-Frame Web VR Playground">
                                     <div class="portfolio-box-caption">
                                         <div class="portfolio-box-caption-content">
-                                            <div class="project-name">A-Frame Scene Generator</div>
-                                            <div class="project-category text-faded">A Web VR that lets users use voice commands to spawn objects in random places</div>
+                                            <div class="portfolio-box-caption-content">
+                                                <div class="project-name">A-Frame Web VR Playground</div>
+                                                <div class="project-category text-faded">A Web VR playground where the user can move around and stretch objects using the Oculus Rift</div>
+                                            </div>
                                         </div>
                                     </div>
                                 </a>
@@ -373,7 +374,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <a href="https://github.com/Eg0Jemima" target="_blank">
+                        <a href="https://github.com/MannB3ast" target="_blank">
                             <img src="img/icons/github.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Github">
                         </a>
                         <h3>Github</h3>
@@ -381,7 +382,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <a href="https://www.twitch.tv/eg0jemima" target="_blank">
+                        <a href="https://www.twitch.tv/djmannmade" target="_blank">
                             <img src="img/icons/twitch.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Twitch">
                         </a>
                         <h3>Twitch</h3>
@@ -389,7 +390,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <a href="https://twitter.com/Eg0jemima" target="_blank">
+                        <a href="https://twitter.com/MannB3ast" target="_blank">
                             <img src="img/icons/twitter.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Twitter">
                         </a>
                         <h3>Twitter</h3>
@@ -408,7 +409,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <a href="https://www.hackerrank.com/Eg0jemima" target="_blank">
+                        <a href="https://www.hackerrank.com/MannB3ast" target="_blank">
                             <img src="img/icons/hackerrank.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Hackerrank">
                         </a>
                         <h3>Hackerrank</h3>
@@ -416,7 +417,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <a href="http://stackoverflow.com/users/3232829/eg0jemima" target="_blank">
+                        <a href="http://stackoverflow.com/users/3232829/mannb3ast" target="_blank">
                             <img src="img/icons/stackoverflow.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Stack Overflow">
                         </a>
                         <h3>Stack Overflow</h3>
