--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <a href="https://github.com/MannB3ast" target="_blank">
+                        <a href="https://github.com/MannM4chine" target="_blank">
                             <img src="img/icons/github.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Github">
                         </a>
                         <h3>Github</h3>
@@ -390,7 +390,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <a href="https://twitter.com/MannB3ast" target="_blank">
+                        <a href="https://twitter.com/MannM4chine" target="_blank">
                             <img src="img/icons/twitter.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Twitter">
                         </a>
                         <h3>Twitter</h3>
