--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="An online portfolio of Eustace R Mann Jr, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!">
     <meta name="author" content="Eustace R Mann Jr">
-    <meta name="keywords" content="games, apps, development, dev, game, portfolio, Mann, Jr, Eustace, EJ, java, android, c#, unity, twitch, twitter, streaming, music, edm, dj">
+    <meta name="keywords" content="games, apps, development, dev, game, portfolio, Mann, Jr, Eustace, EJ, java, android, c#, unity, twitch, twitter, streaming, music, edm, dj, soundcloud, electronic, c++, trance, house, production, comcast">
 
     <meta property='og:title' content="Eustace R Mann Jr" />
     <meta property="og:image" content="http://ejmanngamedev.com/img/linkedin/linkedin_image.png" />
@@ -135,8 +135,8 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">About EJ</h2>
                     <hr class="light">
-                    <p class="text-faded">From software auditor to virtual reality and game developer, EJ has come a long way. During his undergraduate career at Lehigh University, EJ worked hard auditing software for Lehigh's Center of Advanced Materials and Nanotechnology through the school's work study program. After completing his Bachelor's degree in Cognitive Science, he earned his Master's in Linguistics and Cognitive Science at the University of Delaware. He then went on to develop AAA Northampton County's public website as an intern.</p>
-                    <p class="text-faded">EJ moved on to developing touch screen menus and SQL databases for bars and restaurants at a company known as Harbortouch. And soon after, he was blessed with an opportunity to begin doing iOS development. EJ developed over 10 iPad and iPhone apps during his training which opened the doorway to Android development.</p>
+                    <p class="text-faded">From software auditor to virtual reality game developer, EJ has come a long way. During his undergraduate career at Lehigh University, EJ worked hard auditing software for Lehigh's Center for Advanced Materials and Nanotechnology through the school's work study program. After completing his Bachelor's degree in Cognitive Science, he earned his Master's degree in Linguistics and Cognitive Science at the University of Delaware. He then went on to develop AAA Northampton County's public website as an intern.</p>
+                    <p class="text-faded">EJ moved on to developing touch screen menus and SQL databases for bars and restaurants at Harbortouch America. And soon after, he was blessed with an opportunity to begin doing iOS development. EJ developed over 10 iPad and iPhone apps during his training which opened the doorway to Android development.</p>
                     <p class="text-faded">EJ has worked with big name companies like Ecotech Marine and Highmark Health, and now works for Comcast in Center City Philadelphia developing the company's newest virtual and mixed reality experiences!</p>
                     <p class="text-faded">In his free time, EJ produces his own music and develops his own video games. In addition, he practices Wing Chun kung fu at <a href="https://www.philadelphiawingchun.com/" style="color: aquamarine;font-weight: bold;">Philadelphia Wing Chun</a>.</p>
                     <p class="text-faded">Only one goal remains, developing a AAA game title for a major game studio, a goal he has his mind set on.</p>
@@ -374,7 +374,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <a href="https://github.com/MannM4chine" target="_blank">
+                        <a href="https://github.com/mann0nomix" target="_blank">
                             <img src="img/icons/github.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Github">
                         </a>
                         <h3>Github</h3>
@@ -390,48 +390,23 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <a href="https://twitter.com/MannM4chine" target="_blank">
-                            <img src="img/icons/twitter.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Twitter">
-                        </a>
-                        <h3>Twitter</h3>
-                    </div>
-                </div>
-            </div>
-            <br/>
-            <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <a href="https://connect.unity.com/u/5849fa5032b30600272b73dc" target="_blank">
-                            <img src="img/icons/unityconnect.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Unity Connect">
-                        </a>
-                        <h3>Unity Connect</h3>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <a href="https://www.hackerrank.com/MannB3ast" target="_blank">
-                            <img src="img/icons/hackerrank.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Hackerrank">
-                        </a>
-                        <h3>Hackerrank</h3>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <a href="http://stackoverflow.com/users/3232829/mannb3ast" target="_blank">
-                            <img src="img/icons/stackoverflow.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Stack Overflow">
-                        </a>
-                        <h3>Stack Overflow</h3>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <a href="https://soundcloud.com/mannmademusik" target="_blank">
-                            <img src="img/icons/soundcloud.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="100" width="90" alt="Sound Cloud">
+                        <a href="https://soundcloud.com/djmannmade" target="_blank">
+                            <img src="img/icons/soundcloud.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="100" width="90" alt="SoundCloud">
                         </a>
                         <h3>SoundCloud</h3>
                     </div>
                 </div>
+                <!-- <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <a href="https://twitter.com/djmannmade" target="_blank">
+                            <img src="img/icons/twitter.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Twitter">
+                        </a>
+                        <h3>Twitter</h3>
+                    </div>
+                </div> -->
             </div>
+            <!-- <br/>
+            </div> -->
         </div>
     </section>
 
@@ -477,7 +452,7 @@
                             </tr>
                             <tr>
                                 <td>C#</td>
-                                <td>4</td>
+                                <td>5</td>
                             </tr>
                             <tr>
                                 <td>C++</td>
@@ -564,7 +539,7 @@
                         <tbody>
                             <tr>
                                 <td>Unity</td>
-                                <td>4</td>
+                                <td>5</td>
                             </tr>
                             <tr>
                                 <td>Unreal Engine</td>
@@ -572,7 +547,7 @@
                             </tr>
                             <tr>
                                 <td>Blender</td>
-                                <td>2</td>
+                                <td>3</td>
                             </tr>
                         </tbody>
                     </table>
@@ -585,8 +560,8 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Oculus (Quest / Rift)</td>
-                                <td>3</td>
+                                <td>Oculus</td>
+                                <td>4</td>
                             </tr>
                             <tr>
                                 <td>A-Frame WebVR</td>
@@ -647,9 +622,9 @@
                     <p>Reach out to me if you need a developer or sound produced for your next game, virtual reality, or music project!</p>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <a href="mailto:ejmann@udel.edu">
+                    <a href="mailto:mannmade@udel.edu">
                         <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                        <p>ejmann@udel.edu</p>
+                        <p>mannmade@udel.edu</p>
                     </a>
                 </div>
             </div>
