--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <link rel="preload" href="img/icons/twitch.png.png" as="image">
     <link rel="preload" href="img/icons/twitter.png.png" as="image">
     <link rel="preload" href="img/icons/unityconnect.png.png" as="image">
-    <link rel="preload" href="img/portfolio/thumbnails/1.png" as="image">
+    <!-- <link rel="preload" href="img/portfolio/thumbnails/1.png" as="image"> -->
     <link rel="preload" href="img/portfolio/thumbnails/2.png" as="image">
     <link rel="preload" href="img/portfolio/thumbnails/3.png" as="image">
     <link rel="preload" href="img/portfolio/thumbnails/4.png" as="image">
@@ -59,6 +59,10 @@
     <link rel="preload" href="img/portfolio/thumbnails/blocks.png" as="image">
     <link rel="preload" href="img/portfolio/thumbnails/food_league.png" as="image">
     <link rel="preload" href="img/portfolio/thumbnails/lof_avatar_creator.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/djmannmade.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/stella_menu.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/boss_block_basketball.png" as="image">
+    <link rel="preload" href="img/portfolio/thumbnails/mannmade_metal.png" as="image">
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -122,7 +126,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading" style="text-shadow: 0.05em 0.05em #000000;">Certified Scrum Master <br/>in Virtual Reality & Gaming</h1>
+                <h1 id="homeHeading" style="text-shadow: 0.05em 0.05em #000000;">Certified </br> Scrum Master & Product Owner <br/>in <br/> VR and Games</h1>
                 <!-- <hr>
                 <p style="text-shadow: 0.05em 0.05em #55b3ff;">Bringing multitudes of unimaginable virtual reality, video game, and mobile experiences to all platforms!</p> -->
             </div>
@@ -161,24 +165,24 @@
                         <ul>
                             <!-- Define photos here -->
                             <li>
-                                <a href="videos/xvrtrailer.mp4" class="portfolio-box" target="_blank">
-                                    <img src="img/portfolio/thumbnails/1.png" class="img-scroller" alt="Xfinity VR">
+                                <a href="https://twitch.tv/djmannmade" class="portfolio-box" target="_blank">
+                                    <img src="img/portfolio/thumbnails/djmannmade.png" class="img-scroller" alt="DJ Mannmade">
                                     <div class="portfolio-box-caption">
                                         <div class="portfolio-box-caption-content">
-                                            <div class="project-name">Xfinity VR</div>
-                                            <div class="project-category text-faded">A virtual reality app made with Unity that brings Comcast's 360 video library to the Samsung Gear and Google Daydream</div>
+                                            <div class="project-name">DJ Mannmade Twitch</div>
+                                            <div class="project-category text-faded">Digital DJ for the Metaverse MMO community, Final Fantasy 14</div>
                                         </div>
                                     </div>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://fusion.crswll.now.sh/" class="portfolio-box" target="_blank">
-                                    <img src="img/portfolio/thumbnails/food_league.png" class="img-scroller" alt="League of Food Comcast Concept">
+                                <a href="videos/mm_blue_logo.mp4" class="portfolio-box" target="_blank">
+                                    <img src="img/portfolio/thumbnails/mm_blue_logo.png" class="img-scroller" alt="After Effects Saber Logo">
                                     <div class="portfolio-box-caption">
                                         <div class="portfolio-box-caption-content">
                                             <div class="portfolio-box-caption-content">
-                                                <div class="project-name">Comcast Fusion Arena Concept App</div>
-                                                <div class="project-category text-faded">A web based mobile app concept for the new Comcast Fusion E-Sports Arena! This app contains a unity game and other cool features! Best viewed on mobile.</div>
+                                                <div class="project-name">After Effects Saber Logo for <br/> DJ Mannmade</div>
+                                                <div class="project-category text-faded">A self-made awesome animated logo using the Saber plugin for After Effects for DJ Mannmade</div>
                                             </div>
                                         </div>
                                     </div>
@@ -198,19 +202,6 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://legend-waitress.herokuapp.com" class="portfolio-box" target="_blank">
-                                    <img src="img/portfolio/thumbnails/12.png" class="img-scroller" alt="Comcast Social Web VR">
-                                    <div class="portfolio-box-caption">
-                                        <div class="portfolio-box-caption-content">
-                                            <div class="portfolio-box-caption-content">
-                                                <div class="project-name">Comcast Social Web VR</div>
-                                                <div class="project-category text-faded">A social virtual reality experience where multiple players can view the same movie trailer & teleport around the map</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
                                 <a href="MarioCastleAnimation/mariocastle.html" class="portfolio-box" target="_blank">
                                     <img src="img/portfolio/thumbnails/mario_castle.png" class="img-scroller" alt="Castle Animation">
                                     <div class="portfolio-box-caption">
@@ -224,25 +215,28 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://three-js-avatar.glitch.me/" class="portfolio-box" target="_blank">
-                                    <img src="img/portfolio/thumbnails/8.png" class="img-scroller" alt="Three.js Avatar Manipulator">
+                                <a class="portfolio-box" target="_blank">
+                                    <!-- href="https://play.google.com/store/apps/details?id=com.bossblockbasketball.bossblockbasketball"  -->
+                                    <img src="img/portfolio/thumbnails/boss_block_basketball.png" class="img-scroller" alt="Boss Block Basketball">
                                     <div class="portfolio-box-caption">
                                         <div class="portfolio-box-caption-content">
                                             <div class="portfolio-box-caption-content">
-                                                <div class="project-name">Three.js Avatar Manipulator</div>
-                                                <div class="project-category text-faded">Manipulate the bones of an avatar modeled in Blender in a Three.js scene</div>
+                                                <div class="project-name">Boss Block Basketball</div>
+                                                <div class="project-category text-faded">A casual swipe and shoot basketball game made with Unity for Android and iOS (Discontinued)</div>
                                             </div>
                                         </div>
                                     </div>
                                 </a>
                             </li>
                             <li>
-                                <a href="LOF_AvatarCreator/lof_avatar_creator.html" class="portfolio-box" target="_blank">
-                                    <img src="img/portfolio/thumbnails/lof_avatar_creator.png" class="img-scroller" alt="Scene Generator">
+                                <a href="videos/mm_orange_logo.mp4" class="portfolio-box" target="_blank">
+                                    <img src="img/portfolio/thumbnails/mm_orange_logo.png" class="img-scroller" alt="After Effects Circle Logo">
                                     <div class="portfolio-box-caption">
                                         <div class="portfolio-box-caption-content">
-                                            <div class="project-name">League of Food Avatar Creator Concept</div>
-                                            <div class="project-category text-faded">A really cool avatar creator concept app for Philadelphia Fusion Overwatch event guests!</div>
+                                            <div class="portfolio-box-caption-content">
+                                                <div class="project-name">After Effects Circle Logo for <br/> DJ Mannmade</div>
+                                                <div class="project-category text-faded">A self-made awesome animated circular logo using polar coordinates in After Effects for DJ Mannmade</div>
+                                            </div>
                                         </div>
                                     </div>
                                 </a>
@@ -281,27 +275,39 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://aframe-demo.glitch.me/" class="portfolio-box" target="_blank">
-                                    <img src="img/portfolio/thumbnails/7.png" class="img-scroller" alt="A-Frame Web VR Playground">
+                                <a href="videos/mm_metal.gif" class="portfolio-box" target="_blank">
+                                    <img src="img/portfolio/thumbnails/mannmade_metal.png" class="img-scroller" alt="After Effects Polar Selfie Art">
                                     <div class="portfolio-box-caption">
                                         <div class="portfolio-box-caption-content">
                                             <div class="portfolio-box-caption-content">
-                                                <div class="project-name">A-Frame Web VR Playground</div>
-                                                <div class="project-category text-faded">A Web VR playground where the user can move around and stretch objects using the Oculus Rift</div>
+                                                <div class="project-name">After Effects Metal Art for <br/> DJ Mannmade</div>
+                                                <div class="project-category text-faded">A self-made awesome animated Metal logo using multiple layers in After Effects for DJ Mannmade</div>
                                             </div>
                                         </div>
                                     </div>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.youtube.com/playlist?list=PLwOpE5mgplNaqZ4qnQ6j0jWn-F6xZVJ8z" class="portfolio-box" target="_blank">
+                                <a class="portfolio-box" target="_blank">
+                                    <!-- href="https://www.youtube.com/playlist?list=PLwOpE5mgplNaqZ4qnQ6j0jWn-F6xZVJ8z" -->
                                     <img src="img/portfolio/thumbnails/9.png" class="img-scroller" alt="Microsoft HoloLens Collection">
                                     <div class="portfolio-box-caption">
                                         <div class="portfolio-box-caption-content">
                                             <div class="portfolio-box-caption-content">
                                                 <div class="project-name">Microsoft HoloLens Works</div>
-                                                <div class="project-category text-faded">3 Microsoft HoloLens Apps: An interactive astronaut, a digital pet, and Spider Slayer, a game where you must swat off spiders in mixed reality (3 YouTube Videos)</div>
+                                                <div class="project-category text-faded">3 Microsoft HoloLens Apps: An interactive astronaut, a digital pet, and Spider Slayer, a game where you must swat off spiders in mixed reality</div>
                                             </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="portfolio-box" target="_blank">
+                                    <img src="img/portfolio/thumbnails/stella_menu.png" class="img-scroller" alt="Stella First Flight">
+                                    <div class="portfolio-box-caption">
+                                        <div class="portfolio-box-caption-content">
+                                            <div class="project-name">Stella First Flight</div>
+                                            <div class="project-category text-faded">A 3D side-scroller space flight game similar to Star Fox made in Unity <br/> (Discontinued)</div>
                                         </div>
                                     </div>
                                 </a>
@@ -325,19 +331,6 @@
                                             <div class="portfolio-box-caption-content">
                                                 <div class="project-name">Mr. Blue Shirt Website</div>
                                                 <div class="project-category text-faded">A website designed with HTML5, CSS3, and Jquery to promote the Mr. Blue Shirt film series produced by Michael Stewart and Reckoning Force Productions</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://play.google.com/store/apps/details?id=com.bossblockbasketball.bossblockbasketball" class="portfolio-box" target="_blank">
-                                    <img src="img/portfolio/thumbnails/2.png" class="img-scroller" alt="Boss Block Basketball">
-                                    <div class="portfolio-box-caption">
-                                        <div class="portfolio-box-caption-content">
-                                            <div class="portfolio-box-caption-content">
-                                                <div class="project-name">Boss Block Basketball</div>
-                                                <div class="project-category text-faded">A casual swipe and shoot basketball game made with Unity for Android and iOS</div>
                                             </div>
                                         </div>
                                     </div>
@@ -599,12 +592,16 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td><a target="_blank" href="img/certifications/MannUnityCert092017.png" style="color: aquamarine;font-weight: bold;">Unity Certified Developer</a></td>
+                                <td><a target="_blank" href="img/certifications/MannUnityCert2017.png" style="color: aquamarine;font-weight: bold;">Unity Certified Developer</a></td>
                                 <td>09/2017</td>
                             </tr>
                             <tr>
-                                <td><a target="_blank" href="img/certifications/MannScrumCert032017.png" style="color: aquamarine;font-weight: bold;">Certified Scrum Master</a></td>
+                                <td><a target="_blank" href="img/certifications/MannScrumCert2017.png" style="color: aquamarine;font-weight: bold;">Certified Scrum Master</a></td>
                                 <td>03/2017</td>
+                            </tr>
+                            <tr>
+                                <td><a target="_blank" href="img/certifications/MannProductOwnerCert2021.png" style="color: aquamarine;font-weight: bold;">Certified Product Owner</a></td>
+                                <td>12/2021</td>
                             </tr>
                         </tbody>
                     </table>
